# hypergcc

./: LICENSE  Snakefile  pyproject.toml  readme.rst
hypergcc/: hypergraph.py
hypergcc/main/: calc_cc.py  calc_degrees.py  calc_graph_statistics.py  calc_ncc.py  count_motifs.py
hypergcc/motifs/: hypergraph.py  loaders.py  motifs.py  motifs2.py  utils.py
notebook/: Figures.ipynb
